Fix spacing

--- a/user-interface/frontend/themes/datamanager/components/dialog.css
+++ b/user-interface/frontend/themes/datamanager/components/dialog.css
@@ -826,9 +826,11 @@ vaadin-upload-file::part(meta){
 .register-samples-dialog .in-progress-view,
 .register-samples-dialog .failed-view,
 .register-samples-dialog .succeeded-view,
+.register-samples-dialog .upload-with-display,
 .edit-samples-dialog .in-progress-view,
 .edit-samples-dialog .failed-view,
-.edit-samples-dialog .succeeded-view {
+.edit-samples-dialog .succeeded-view,
+.edit-samples-dialog .upload-with-display {
   display: grid;
   row-gap: var(--lumo-space-l);
 }
